--- a/control
+++ b/control
@@ -6,10 +6,10 @@ Build-Depends: bison,
                debhelper-compat (= 13),
                dpkg-dev (>= 1.16.1~),
                libevent-dev (>> 2.0.10),
-               libncurses5-dev,
+               libncurses-dev,
                libutempter-dev,
                libutil-freebsd-dev [kfreebsd-any],
-               pkg-config
+               pkgconf
 Standards-Version: 4.6.1
 Rules-Requires-Root: no
 Homepage: https://tmux.github.io/
